# Spot-Exchange

./: .gitmodules  CMakeLists.txt  README.md
include/: exception.hpp  message.hpp  order.hpp  orderrejection.hpp  ordertypes.hpp
include/client/: centerformatting.hpp  client.hpp  clientfeedhandler.hpp  clientorderbook.hpp  marketdatatypes.hpp
include/dataplatform/: dataplatform.hpp
include/dataprovider/: dataprovider.hpp
include/info/: fill.hpp  order.hpp  orderrejection.hpp  orderresult.hpp  orderstatus.hpp  ordertypes.hpp
include/server/: fifomatching.hpp  level.hpp  limit.hpp  logger.hpp  orderbook.hpp  ordermanager.hpp  serverconnection.hpp  tradeserver.hpp
include/server/matching/: fifomatching.hpp  matchresult.hpp
include/server/order/: level.hpp  limit.hpp  orderbook.hpp  orderbookmanager.hpp  ordermanager.hpp
include/server/rpc/: bidirstreamrpcjob.hpp  calldata.hpp  jobhandlers.hpp  marketdatadispatcher.hpp  orderentryjobhandlers.hpp  orderentrystreamconnection.hpp  rpcjob.hpp  rpcprocessor.hpp  unaryrpcjob.hpp  unarystreamrpcjob.hpp
include/util/: tempbuffer.hpp  util.hpp
src/client/: client.cpp  main.cpp
src/dataplatform/: dataplatform.cpp  main.cpp  orderentry.proto
src/dataprovider/: dataprovider.cpp  main.cpp  orderentry.proto
src/server/: main.cpp  orderbookmanager.cpp  ordermanager.cpp  serverconnection.cpp  tradeserver.cpp
src/server/matching/: fifomatching.cpp
src/server/order/: orderbook.cpp  orderbookmanager.cpp
src/server/rpc/: marketdatadispatcher.cpp  orderentrystreamconnection.cpp
tests/: CMakeLists.txt  orderbooktest.cpp
tests/benchmark/: CMakeLists.txt  orderbookbenchmark.cpp  serverbencher.cpp  serverbenchmanager.py
tests/unit/: CMakeLists.txt  orderbooktest.cpp
